--- a/naqlah.client/src/styles.css
+++ b/naqlah.client/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #f7f7f7;
+}
+@media (min-width: 1536px) {
+  .container {
+      max-width: 1440px !important;
+  }
+}
