LandPage, Login and admin layouts

--- a/naqlah.client/src/app/Pages/landing-page/home-page/home-page.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/home-page/home-page.component.html
@@ -1,5 +1,7 @@
-<app-about></app-about>
-<app-vision></app-vision>
-<app-services></app-services>
-<app-download></app-download>
-<app-contact-us></app-contact-us>
+<main class="flex flex-col gap-[50px]">
+  <app-about></app-about>
+  <app-vision></app-vision>
+  <app-services></app-services>
+  <app-download></app-download>
+  <app-contact-us></app-contact-us>
+</main>
