--- a/naqlah.client/src/app/Layouts/landing-page-layout/landing-page-layout.component.html
+++ b/naqlah.client/src/app/Layouts/landing-page-layout/landing-page-layout.component.html
@@ -1,3 +1,5 @@
 <app-public-header></app-public-header>
-<router-outlet></router-outlet>
+<div class="body" dir="rtl">
+  <router-outlet></router-outlet>
+</div>
 <app-public-footer></app-public-footer>
