--- a/naqlah.client/src/app/Pages/landing-page/about/about.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/about/about.component.html
@@ -1,22 +1,37 @@
-<section class="text-center py-12 bg-gray-50">
-  <div class="container mx-auto">
-    <div class="mb-6">
-      <video controls class="mx-auto rounded shadow-lg max-w-xl">
-        <source src="video.mp4" type="video/mp4">
-        متصفحك لا يدعم الفيديو
-      </video>
+<main class="flex flex-col gap-[50px]">
+  <section class="about">
+    <div class="custom-container">
+      <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
+        <div class="w-full flex justify-center">
+          <div class="w-full md:w-[60%] flex flex-col gap-[24px] text-center md:text-right mb-6">
+            <h2 class="about_header text-secondaryColor">شحن لا يعرف حدوداً</h2>
+            <p class="text-subColor text-base font-medium">Lorem ipsum dolor sit amet consectetur adipiscing elidolor mattis sit phasellus mollis sit aliquam sit nullam neques.</p>
+          </div>
+        </div>
+        <div class="h-[280px] md:h-[380px]">
+          <img src="../../../../assets/images/pic1.png" alt="" class="h-full w-full">
+        </div>
+      </div>
     </div>
-    <h2 class="text-3xl font-bold text-green-800 mb-2">نحن لا نعرف حدودًا</h2>
-    <p class="text-gray-600 text-lg">حلول لوجستية متكاملة تربطك بالعالم بكل سهولة</p>
-  </div>
-</section>
+  </section>
 
-<section class="py-12 bg-gray-50 text-center">
-  <div class="container mx-auto">
-    <h2 class="text-3xl font-bold text-green-800 mb-4">رؤيتنا</h2>
-    <p class="text-gray-700 max-w-2xl mx-auto text-lg mb-6">
-      نقل يعتمد عليه، شراكات ناجحة، ونمو مستدام.
-    </p>
-    <a href="#" class="inline-block px-6 py-2 bg-green-800 text-white rounded hover:bg-green-700 transition">اقرأ المزيد</a>
-  </div>
-</section>
+  <section class="about-section">
+    <div class="custom-container">
+      <div class="flex flex-col gap-[60px]">
+        <h2 class="main-header">من نحن</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
+          <div class="w-full flex justify-center text-center md:text-right mb-6">
+            <p class="main-definition w-[83%]">
+              نقله تسعى جاهدين لتقديم حلول نقل الشحنات التي تتسم بالكفاءة، والأمان، والموثوقية. تأسست شركتنا في عام [سنة التأسيس]، ومنذ ذلك الحين، نلتزم بتقديم خدمات شحن عالية الجودة لتلبية احتياجات عملائنا المتنوعة في [الموقع الجغرافي أو الأسواق المستهدفة].
+            </p>
+          </div>
+          <div class="about-images h-[316px]">
+            <img src="../../../../assets/images/pic3.png" alt="">
+            <img src="../../../../assets/images/pic2.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
