--- a/naqlah.client/src/app/Pages/landing-page/public-header/public-header.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/public-header/public-header.component.html
@@ -1,13 +1,19 @@
-<header class="bg-white shadow-md" dir="rtl">
-  <div class="container">
-    <nav class="container mx-auto flex gap-[60px] items-center p-4">
-      <img src="../../../../assets/images/car.png" class="w-[64px] h-[64px]" alt="">
-      <ul class="flex gap-[60px] text-gray-700 font-medium">
-        <li><a href="#" class="hover:text-green-700">الصفحة الرئيسية</a></li>
-        <li><a href="#" class="hover:text-green-700">عن الشركة</a></li>
-        <li><a href="#" class="hover:text-green-700">خدماتنا</a></li>
-        <li><a href="#" class="hover:text-green-700">تواصل معنا</a></li>
-      </ul>
+<header class="bg-white" dir="rtl">
+  <div class="custom-container">
+    <nav class="flex items-center justify-between p-4">
+      <div class="flex items-center gap-[60px]">
+        <img src="../../../../assets/images/car.png" class="w-[64px] h-[64px]" alt="">
+        <ul class="header-links flex gap-[30px] text-primaryColor hidden md:flex">
+          <li><a href="#" class="hover:text-green-700 p-[10px]">الصفحة الرئيسية</a></li>
+          <li><a href="#" class="hover:text-green-700 p-[10px]">من نحن</a></li>
+          <li><a href="#" class="hover:text-green-700 p-[10px]">خدماتنا</a></li>
+          <li><a href="#" class="hover:text-green-700 p-[10px]">تحميل التطبيق</a></li>
+          <li><a href="#" class="hover:text-green-700 p-[10px]">تواصل معنا</a></li>
+        </ul>
+      </div>
+      <div class="flex md:hidden">
+        menue
+      </div>
     </nav>
   </div>
 </header>
