--- a/naqlah.client/src/app/Pages/landing-page/services/services.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/services/services.component.html
@@ -1,10 +1,32 @@
-<section class="py-12 bg-white text-center">
-  <div class="container mx-auto">
-    <h2 class="text-3xl font-bold text-green-800 mb-8">خدماتنا</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-gray-100 p-6 rounded shadow hover:shadow-md transition">نقل ثقيل</div>
-      <div class="bg-gray-100 p-6 rounded shadow hover:shadow-md transition">نقل خفيف</div>
-      <div class="bg-gray-100 p-6 rounded shadow hover:shadow-md transition">سيارات الإيجار</div>
+
+<section class="services">
+  <h2 class="main-header mb-6">خدماتنا</h2>
+  <div class="services-container">
+    <div class="custom-container h-full flex flex-col justify-end">
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 justify-center">
+
+        <div class="flex flex-col">
+          <img src="../../../../assets/images/pic7.png" class="w-full h-[312px] object-cover" alt="">
+          <div class="bg-secondaryColor flex items-center justify-center h-[72px] p-4 rounded-b hover:shadow-md transition text-center text-[32px] font-bold text-white">
+            نقل خفيف
+          </div>
+        </div>
+
+        <div class="flex flex-col">
+          <img src="../../../../assets/images/pic8.png" class="w-full h-[312px] object-cover" alt="">
+          <div class="bg-secondaryColor flex items-center justify-center h-[72px] p-4 rounded-b hover:shadow-md transition text-center text-[32px] font-bold text-white">
+            نقل ثقيل
+          </div>
+        </div>
+
+        <div class="flex flex-col">
+          <img src="../../../../assets/images/pic9.png" class="w-full h-[312px] object-cover" alt="">
+          <div class="bg-secondaryColor flex items-center justify-center h-[72px] p-4 rounded-b hover:shadow-md transition text-center text-[32px] font-bold text-white">
+            سيارات للإيجار
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 </section>
