--- a/naqlah.client/src/app/Pages/landing-page/vision/vision.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/vision/vision.component.html
@@ -1,9 +1,18 @@
-<section class="py-12 bg-gray-50 text-center">
-  <div class="container mx-auto">
-    <h2 class="text-3xl font-bold text-green-800 mb-4">رؤيتنا</h2>
-    <p class="text-gray-700 max-w-2xl mx-auto text-lg mb-6">
-      نقل يعتمد عليه، شراكات ناجحة، ونمو مستدام.
-    </p>
-    <a href="#" class="inline-block px-6 py-2 bg-green-800 text-white rounded hover:bg-green-700 transition">اقرأ المزيد</a>
+<section class="vision">
+  <div class="custom-container">
+    <div class="flex flex-col gap-[60px]">
+      <h2 class="main-header">رؤيتنا</h2>
+      <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
+        <div class="vision-images h-[316px] flex justify-center items-center">
+          <img src="../../../../assets/images/pic5.png" alt="">
+          <img src="../../../../assets/images/pic4.png" alt="">
+        </div>
+        <div class="w-full flex justify-center text-center md:text-right items-center mt-6">
+          <p class="main-definition w-[70%]">
+            نقل شحناتكم بأمان وفعالية وفي الوقت المحدد. نحن نعمل بجد لضمان أن كل عملية نقل تتم بسلاسة وكفاءة من خلال فريق من الخبراء ذوي الخبرة العالية في مجال الشحن.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
