--- a/naqlah.client/src/app/Pages/landing-page/about/about.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/about/about.component.html
@@ -1,21 +1,21 @@
 <main class="flex flex-col gap-[50px]">
-  <section class="about">
+  <section class="about" data-aos="fade-down">
     <div class="custom-container">
       <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
         <div class="w-full flex justify-center">
-          <div class="w-full md:w-[60%] flex flex-col gap-[24px] text-center md:text-right mb-6">
+          <div class="w-full md:w-[60%] flex flex-col gap-[24px] text-center md:text-right mb-6" data-aos="fade-down">
             <h2 class="about_header text-secondaryColor">شحن لا يعرف حدوداً</h2>
             <p class="text-subColor text-base font-medium">Lorem ipsum dolor sit amet consectetur adipiscing elidolor mattis sit phasellus mollis sit aliquam sit nullam neques.</p>
           </div>
         </div>
         <div class="h-[280px] md:h-[380px]">
-          <img src="../../../../assets/images/pic1.png" alt="" class="h-full w-full">
+          <img src="../../../../assets/images/pic1.png" alt="" class="h-full w-full" data-aos="fade-up">
         </div>
       </div>
     </div>
   </section>
 
-  <section class="about-section">
+  <section class="about-section" data-aos="fade-zoom-in">
     <div class="custom-container">
       <div class="flex flex-col gap-[60px]">
         <h2 class="main-header">من نحن</h2>
