--- a/naqlah.client/src/app/Pages/landing-page/contact-us/contact-us.component.css
+++ b/naqlah.client/src/app/Pages/landing-page/contact-us/contact-us.component.css
@@ -1,11 +1,12 @@
 .contactUs-info {
   background-color: #e9f0ee;
   padding:17px;
-  width: 35%;
+  @apply w-full lg:w-[35%]
 }
 .truck {
   background-image: url("../../../../assets/images/truck.png");
-  background-size: 100% 100%;
+  background-size: contain;
   background-repeat: no-repeat;
   height: 438px;
+  @apply hidden lg:block;
 }
