--- a/naqlah.client/src/app/Pages/landing-page/contact-us/contact-us.component.html
+++ b/naqlah.client/src/app/Pages/landing-page/contact-us/contact-us.component.html
@@ -1,103 +1,104 @@
 <section class="bg-white px-6 py-12 md:py-20">
-  <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-10 items-center">
+  <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-10 items-center">
     <div class="flex flex-col gap-6 text-right">
       <div>
         <h2 class="font-bold text-secondaryColor text-[48px]">تواصل معنا</h2>
         <p class="mt-2 text-gray-500 leading-relaxed">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
       </div>
-
-      <div class="contactUs-info rounded-md flex items-center gap-4 justify-end ">
-        <div dir="ltr">
-          <div class="text-sm text-gray-700 text-left">Email:</div>
-          <div class="text-sm font-semibold">contact&#64;brix.com</div>
+      <div class="flex flex-col md:flex-row lg:flex-col gap-[15px]">
+        <div class="contactUs-info rounded-md flex items-center gap-4 justify-end ">
+          <div dir="ltr">
+            <div class="text-sm text-gray-700 text-left">Email:</div>
+            <div class="text-sm font-semibold">contact&#64;brix.com</div>
+          </div>
+          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.769231" y="0.769231" width="46.4615" height="46.4615" rx="3.23077" fill="#F1F3F7" stroke="#234A43" stroke-width="1.53846"/>
+            <mask id="mask0_2637_27413" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="46" height="46">
+            <rect x="1.68066" y="1.84961" width="44.6131" height="44.6024" rx="4" fill="#E3EFFF"/>
+            </mask>
+            <g mask="url(#mask0_2637_27413)">
+            <line x1="32.8195" y1="-2.24161e-08" x2="32.8195" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="41.1271" y1="-2.24161e-08" x2="41.1271" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="24.5118" y1="-2.24161e-08" x2="24.5118" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="7.89661" y1="-2.24161e-08" x2="7.89661" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="16.2042" y1="-2.24161e-08" x2="16.2042" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="16.2035" x2="49.0237" y2="16.2035" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="7.89587" x2="49.0237" y2="7.89587" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="24.5113" x2="49.0237" y2="24.5113" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="41.1266" x2="49.0237" y2="41.1266" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="32.819" x2="49.0237" y2="32.819" stroke="#86A6A0" stroke-width="1.02564"/>
+            <rect x="1.41211" y="1.53467" width="45.0024" height="44.9916" rx="4" fill="url(#paint0_radial_2637_27413)"/>
+            </g>
+            <g filter="url(#filter0_d_2637_27413)">
+            <path d="M13.2549 17.8971C13.2549 16.26 14.582 14.9329 16.2191 14.9329H31.7814C33.4186 14.9329 34.7457 16.26 34.7457 17.8971V29.662C34.7457 31.2991 33.4186 32.6262 31.7814 32.6262H16.2191C14.582 32.6262 13.2549 31.2991 13.2549 29.662L13.2549 17.8971Z" fill="white" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M14.4004 15.5303L22.6083 22.9007C23.397 23.6089 24.5955 23.5996 25.373 22.879L33.3033 15.5303" fill="#86A6A0"/>
+            <path d="M14.4004 15.7136L22.6083 23.084C23.397 23.7923 24.5955 23.7829 25.373 23.0624L33.3033 15.7136" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+            <filter id="filter0_d_2637_27413" x="8.63965" y="11.3174" width="30.7217" height="26.9243" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+            <feOffset dy="1"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feComposite in2="hardAlpha" operator="out"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0.0969792 0 0 0 0 0.127894 0 0 0 0 0.2375 0 0 0 0.08 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2637_27413"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2637_27413" result="shape"/>
+            </filter>
+            <radialGradient id="paint0_radial_2637_27413" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(23.9133 24.0305) rotate(90) scale(22.4958 22.5012)">
+            <stop stop-color="#F6FAFD" stop-opacity="0.28"/>
+            <stop offset="1" stop-color="#F6FAFD"/>
+            </radialGradient>
+            </defs>
+          </svg>
         </div>
-        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect x="0.769231" y="0.769231" width="46.4615" height="46.4615" rx="3.23077" fill="#F1F3F7" stroke="#234A43" stroke-width="1.53846"/>
-          <mask id="mask0_2637_27413" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="46" height="46">
-          <rect x="1.68066" y="1.84961" width="44.6131" height="44.6024" rx="4" fill="#E3EFFF"/>
-          </mask>
-          <g mask="url(#mask0_2637_27413)">
-          <line x1="32.8195" y1="-2.24161e-08" x2="32.8195" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="41.1271" y1="-2.24161e-08" x2="41.1271" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="24.5118" y1="-2.24161e-08" x2="24.5118" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="7.89661" y1="-2.24161e-08" x2="7.89661" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="16.2042" y1="-2.24161e-08" x2="16.2042" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="16.2035" x2="49.0237" y2="16.2035" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="7.89587" x2="49.0237" y2="7.89587" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="24.5113" x2="49.0237" y2="24.5113" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="41.1266" x2="49.0237" y2="41.1266" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="32.819" x2="49.0237" y2="32.819" stroke="#86A6A0" stroke-width="1.02564"/>
-          <rect x="1.41211" y="1.53467" width="45.0024" height="44.9916" rx="4" fill="url(#paint0_radial_2637_27413)"/>
-          </g>
-          <g filter="url(#filter0_d_2637_27413)">
-          <path d="M13.2549 17.8971C13.2549 16.26 14.582 14.9329 16.2191 14.9329H31.7814C33.4186 14.9329 34.7457 16.26 34.7457 17.8971V29.662C34.7457 31.2991 33.4186 32.6262 31.7814 32.6262H16.2191C14.582 32.6262 13.2549 31.2991 13.2549 29.662L13.2549 17.8971Z" fill="white" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M14.4004 15.5303L22.6083 22.9007C23.397 23.6089 24.5955 23.5996 25.373 22.879L33.3033 15.5303" fill="#86A6A0"/>
-          <path d="M14.4004 15.7136L22.6083 23.084C23.397 23.7923 24.5955 23.7829 25.373 23.0624L33.3033 15.7136" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
-          </g>
-          <defs>
-          <filter id="filter0_d_2637_27413" x="8.63965" y="11.3174" width="30.7217" height="26.9243" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-          <feOffset dy="1"/>
-          <feGaussianBlur stdDeviation="2"/>
-          <feComposite in2="hardAlpha" operator="out"/>
-          <feColorMatrix type="matrix" values="0 0 0 0 0.0969792 0 0 0 0 0.127894 0 0 0 0 0.2375 0 0 0 0.08 0"/>
-          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2637_27413"/>
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2637_27413" result="shape"/>
-          </filter>
-          <radialGradient id="paint0_radial_2637_27413" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(23.9133 24.0305) rotate(90) scale(22.4958 22.5012)">
-          <stop stop-color="#F6FAFD" stop-opacity="0.28"/>
-          <stop offset="1" stop-color="#F6FAFD"/>
-          </radialGradient>
-          </defs>
-        </svg>
-      </div>
 
-      <div class="contactUs-info rounded-md flex items-center gap-4 justify-end ">
-        <div dir="ltr">
-          <div class="text-sm text-gray-700 text-left">Phone:</div>
-          <div class="text-sm font-semibold">(414) 687 - 5892</div>
+        <div class="contactUs-info rounded-md flex items-center gap-4 justify-end ">
+          <div dir="ltr">
+            <div class="text-sm text-gray-700 text-left">Phone:</div>
+            <div class="text-sm font-semibold">(414) 687 - 5892</div>
+          </div>
+          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.769231" y="0.769231" width="46.4615" height="46.4615" rx="3.23077" fill="#F1F3F7" stroke="#234A43" stroke-width="1.53846"/>
+            <mask id="mask0_2637_27445" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="46" height="46">
+            <rect x="1.68066" y="1.84961" width="44.6131" height="44.6024" rx="4" fill="#E3EFFF"/>
+            </mask>
+            <g mask="url(#mask0_2637_27445)">
+            <line x1="32.8195" y1="-2.24161e-08" x2="32.8195" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="41.1271" y1="-2.24161e-08" x2="41.1271" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="24.5118" y1="-2.24161e-08" x2="24.5118" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="7.89661" y1="-2.24161e-08" x2="7.89661" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="16.2042" y1="-2.24161e-08" x2="16.2042" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="16.2035" x2="49.0237" y2="16.2035" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="7.89587" x2="49.0237" y2="7.89587" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="24.5113" x2="49.0237" y2="24.5113" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="41.1266" x2="49.0237" y2="41.1266" stroke="#86A6A0" stroke-width="1.02564"/>
+            <line x1="-1.02441" y1="32.819" x2="49.0237" y2="32.819" stroke="#86A6A0" stroke-width="1.02564"/>
+            <rect x="1.41211" y="1.53467" width="45.0024" height="44.9916" rx="4" fill="url(#paint0_radial_2637_27445)"/>
+            </g>
+            <g filter="url(#filter0_d_2637_27445)">
+            <path d="M19.5 13.5H15.4091C14.3547 13.5 13.5 14.3547 13.5 15.4091C13.5 25.9527 22.0473 34.5 32.5909 34.5C33.6452 34.5 34.5 33.6452 34.5 32.5909V28.4999L30.0001 25.5L27.6666 27.8333C27.2614 28.2387 26.6557 28.3647 26.1465 28.1017C25.2829 27.6554 23.8814 26.8172 22.5 25.5C21.0856 24.1513 20.2569 22.6981 19.841 21.8189C19.6079 21.326 19.7428 20.7572 20.1283 20.3717L22.5 18L19.5 13.5Z" fill="white" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M15.4092 13.5H19.5001L22.5001 18L20.1284 20.3717L15.4092 13.5Z" fill="#86A6A0" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M34.5004 32.5909C34.5004 33.6453 33.6456 34.5 32.5913 34.5L27.667 27.8333L30.0005 25.5L34.5004 28.5V32.5909Z" fill="#86A6A0" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+            <filter id="filter0_d_2637_27445" x="8.88477" y="9.88452" width="30.2314" height="30.231" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+            <feOffset dy="1"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feComposite in2="hardAlpha" operator="out"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0.0969792 0 0 0 0 0.127894 0 0 0 0 0.2375 0 0 0 0.08 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2637_27445"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2637_27445" result="shape"/>
+            </filter>
+            <radialGradient id="paint0_radial_2637_27445" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(23.9133 24.0305) rotate(90) scale(22.4958 22.5012)">
+            <stop stop-color="#F6FAFD" stop-opacity="0.28"/>
+            <stop offset="1" stop-color="#F6FAFD"/>
+            </radialGradient>
+            </defs>
+          </svg>
         </div>
-        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect x="0.769231" y="0.769231" width="46.4615" height="46.4615" rx="3.23077" fill="#F1F3F7" stroke="#234A43" stroke-width="1.53846"/>
-          <mask id="mask0_2637_27445" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="46" height="46">
-          <rect x="1.68066" y="1.84961" width="44.6131" height="44.6024" rx="4" fill="#E3EFFF"/>
-          </mask>
-          <g mask="url(#mask0_2637_27445)">
-          <line x1="32.8195" y1="-2.24161e-08" x2="32.8195" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="41.1271" y1="-2.24161e-08" x2="41.1271" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="24.5118" y1="-2.24161e-08" x2="24.5118" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="7.89661" y1="-2.24161e-08" x2="7.89661" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="16.2042" y1="-2.24161e-08" x2="16.2042" y2="50.0481" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="16.2035" x2="49.0237" y2="16.2035" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="7.89587" x2="49.0237" y2="7.89587" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="24.5113" x2="49.0237" y2="24.5113" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="41.1266" x2="49.0237" y2="41.1266" stroke="#86A6A0" stroke-width="1.02564"/>
-          <line x1="-1.02441" y1="32.819" x2="49.0237" y2="32.819" stroke="#86A6A0" stroke-width="1.02564"/>
-          <rect x="1.41211" y="1.53467" width="45.0024" height="44.9916" rx="4" fill="url(#paint0_radial_2637_27445)"/>
-          </g>
-          <g filter="url(#filter0_d_2637_27445)">
-          <path d="M19.5 13.5H15.4091C14.3547 13.5 13.5 14.3547 13.5 15.4091C13.5 25.9527 22.0473 34.5 32.5909 34.5C33.6452 34.5 34.5 33.6452 34.5 32.5909V28.4999L30.0001 25.5L27.6666 27.8333C27.2614 28.2387 26.6557 28.3647 26.1465 28.1017C25.2829 27.6554 23.8814 26.8172 22.5 25.5C21.0856 24.1513 20.2569 22.6981 19.841 21.8189C19.6079 21.326 19.7428 20.7572 20.1283 20.3717L22.5 18L19.5 13.5Z" fill="white" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M15.4092 13.5H19.5001L22.5001 18L20.1284 20.3717L15.4092 13.5Z" fill="#86A6A0" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M34.5004 32.5909C34.5004 33.6453 33.6456 34.5 32.5913 34.5L27.667 27.8333L30.0005 25.5L34.5004 28.5V32.5909Z" fill="#86A6A0" stroke="#234A43" stroke-width="1.23077" stroke-linecap="round" stroke-linejoin="round"/>
-          </g>
-          <defs>
-          <filter id="filter0_d_2637_27445" x="8.88477" y="9.88452" width="30.2314" height="30.231" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-          <feOffset dy="1"/>
-          <feGaussianBlur stdDeviation="2"/>
-          <feComposite in2="hardAlpha" operator="out"/>
-          <feColorMatrix type="matrix" values="0 0 0 0 0.0969792 0 0 0 0 0.127894 0 0 0 0 0.2375 0 0 0 0.08 0"/>
-          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2637_27445"/>
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2637_27445" result="shape"/>
-          </filter>
-          <radialGradient id="paint0_radial_2637_27445" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(23.9133 24.0305) rotate(90) scale(22.4958 22.5012)">
-          <stop stop-color="#F6FAFD" stop-opacity="0.28"/>
-          <stop offset="1" stop-color="#F6FAFD"/>
-          </radialGradient>
-          </defs>
-        </svg>
       </div>
 
       <div class="truck">
