--- a/naqlah.client/src/app/Pages/admin/header/header.component.html
+++ b/naqlah.client/src/app/Pages/admin/header/header.component.html
@@ -1,5 +1,5 @@
 
-<header class="custom-navBar flex justify-between items-center sticky top-0 bg-headerBg ">
+<header class="custom-navBar flex justify-between items-center sticky top-0 bg-white shadow-md ">
   <div class="container">
     <div class="header flex gap-[10px] md:gap-[15px] items-center w-full justify-between">
       <div class="humburgerIcon" (click)="AppearSideBar()">
