--- a/naqlah.client/src/app/Layouts/admin-layout/admin-layout.component.css
+++ b/naqlah.client/src/app/Layouts/admin-layout/admin-layout.component.css
@@ -1,5 +1,8 @@
 /* dashboard.component.css */
 
+.G-dashboard {
+  font-family: 'Poppins', sans-serif;
+}
 @keyframes slideIn {
   0% {
     transform: translateX(-100%);  /* Sidebar starts off-screen */
@@ -72,7 +75,8 @@
   margin: 0 auto;
 }
 .G-sub_container {
-  padding: 40px 40px 10px 40px;
+  padding: 20px 20px 10px 20px;
+  min-height: 100vh;
 }
 
 .loading-spinner {
